[package]
name = "rradio_lcd_driver"
version = "0.1.0"
authors = ["richcallow <dummy@nowhere.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clerk = "0.4" # lcd_screen
hex = "0.4.2"
gpio-cdev = "0.5" # lcd_screen
log = "0.4"
pnet =  { version =  "0.31", features = [ "std" ] }          # used to get the local IP address
pretty_env_logger = "0.4"
psutil = "3.2"
procfs = "0.14"
rradio-messages = { git = "https://github.com/sammhicks/internet-radio-rs", branch = "development", features = [ "async" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.20", features = [ "rt", "net", "time", "macros" ] }
toml = "0.5"
unidecode = "0.3" # lcd_screen
chrono = "0.4"
arcstr = "1.0"
futures-util = "0.3"
